--- a/src/TDengine.csproj
+++ b/src/TDengine.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5;net6;netstandard2.0;netstandard2.1;net45;net451;</TargetFrameworks>
+    <TargetFrameworks>net6;netstandard2.0;netstandard2.1;</TargetFrameworks>
     <PackageId>TDengine.Connector.test</PackageId>
     <PackageIcon>image\logo.jpg</PackageIcon>
     <PackageReadmeFile>docs\README.md</PackageReadmeFile>
